2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Add support for xpi.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Up default timeout to 300 seconds.

2009-12-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SchedulerSVN.cs: When fetching revisions, stop when branched. Fixes
	#552315.

2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SchedulerBase.cs:
	* SchedulerGIT.cs:
	* SchedulerSVN.cs:
	* Scheduler.cs: Implement GIT support.
	* MonkeyWrench.Database.csproj: Updated with new files.

	* DB.cs: Add ExecuteNonQuery and fix file download when the file
	isn't in the database.

2009-09-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: When cloning a lane clone the timeout for the commands too.

2009-09-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Scheduler.cs: Add a static field indicating whether we're executing
	or not.

	* DeletionDirectives.cs: Surround code in a try block and have a static
	field indicating whether we're executing or not.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: When cloning a lane clone the environment variables too.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: When cloning a lane clone the parent lane too.

2009-07-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Scheduler.cs:
	* SchedulerSVN.cs: Don't use static fields, we leak
	memory now since we're not a standalone program but
	executed inside a web app.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Scheduler.cs: Use the new Async class to use
	the threadpool safely.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DeletionDirectives.cs: Moved ExecuteDeletionDirectives
	here.

	* MonkeyWrench.Database.csproj: Updated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Add a CreateCommand overload that specifies
	a timeout.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SchedulerSVN.cs:
	* Scheduler.cs: Moved here from 