@@ -1,3 +1,8 @@
+2010-06-11  Andrew Jorgensen  <ajorgensen@novell.com>
+
+	* MimeTypes.cs: Consolidated HTM and HTML and fixed the type
+	  (was text/plain rather than text/html).
+
 2010-05-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* FileUtilities.cs: Add a directory deletion method that doesn't fail with
