@@ -1,3 +1,8 @@
+2010-06-11  Andrew Jorgensen  <ajorgensen@novell.com>
+
+	* DB.cs: Add .stderr and .stdout and consolidated .html and
+	  .htm in the switch statement.
+
 2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* DB.cs: Add support for xpi.
